--- a/index.html
+++ b/index.html
@@ -20,6 +20,16 @@
       <canvas id="stage" width="500" height="500"></canvas>
     </div>
 
+    <div id="myModal" class="modal">
+      <div class="modal-content">
+        <p id="game-over">GAME OVER</p>
+        <span>
+          Your score: &nbsp;
+          <p id="max-score"></p>
+        </span>
+      </div>
+    </div>
+
     <script src="src/game.js"></script>
   </body>
 </html>
