Add btn try again

--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
           Your score: &nbsp;
           <p id="max-score"></p>
         </span>
+        <button id="btn" type="button">Try again</button>
       </div>
     </div>
 
