Add github link

--- a/index.html
+++ b/index.html
@@ -5,12 +5,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Snake Game</title>
-
+    <script src="https://kit.fontawesome.com/a076d05399.js"></script>
     <link rel="stylesheet" href="src/styles.css" />
   </head>
   <body>
     <div class="container">
       <div class="content">
+        <a href="https://github.com/goncadanilo/snake-game.git" target="_blank">
+          <i class="fab fa-github"></i>
+          Github
+        </a>
         <h1>Snake Game</h1>
         <div class="score">
           <p>Score: &nbsp;</p>
