--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <body>
     <div class="container">
       <div class="content">
-        <a href="https://github.com/goncadanilo/snake-game.git" target="_blank">
+        <a href="https://github.com/goncadanilo/snake-game" target="_blank">
           <i class="fab fa-github"></i>
           Github
         </a>
