Retirado scroll da tela

--- a/index.html
+++ b/index.html
@@ -10,12 +10,10 @@
   </head>
   <body>
     <div class="container">
-      <div class="content">
+      <div class="content"> 
         <a href="https://github.com/goncadanilo/snake-game" target="_blank">
-          <i class="fab fa-github"></i>
-          Github
+          Snake Game
         </a>
-        <h1>Snake Game</h1>
         <div class="score">
           <p>Score: &nbsp;</p>
           <p id="count"></p>
@@ -35,6 +33,6 @@
       </div>
     </div>
 
-    <script src="src/game.js"></script>
+    <script src="src/main.js"></script>
   </body>
 </html>
